--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "watch-sass": "node-sass-chokidar src/ -o src/ --watch --recursive",
+    "build-css": "node-sass-chokidar src/ -o src/css/",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-sass start-js",
+    "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
+  },  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -40,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "node-sass-chokidar": "^2.0.0",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.61.0"
   }
 }
