--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-lazy-load-image-component": "^1.5.6",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
@@ -23,7 +24,7 @@
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },  
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
